force-app/main/default/objects/DSG_Notifications__c/DSG_Notifications__c.object-meta.xml
<CustomObject>
    <description>Stores all notifications related info sent to partners related with DSG Partner RT leads</description>
    <label>DSG Notification</label>
    <nameField>
        <displayFormat>DSG-{000}</displayFormat>
        <label>Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DSG Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>