force-app/main/default/objects/DSG_Notifications__c/fields/DSG_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>DSG_Response_ID__c</fullName>
    <description>DSG ID available on Lead object</description>
    <label>DSG Response ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>