force-app/main/default/objects/DSG_Notifications__c/fields/Notification_Synced__c.field-meta.xml
<CustomField>
    <fullName>Notification_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field that will be set to ‘True’ each time a record is created in Dell. CI will set it to ‘False’ after sync</description>
    <label>Notification Synced?</label>
    <type>Checkbox</type>
</CustomField>